# subgraph-to-hyperindex-query-converter-poc

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  converted_query.txt
src/: conversion.rs  integration_tests.rs  main.rs
